tests/environment-values/mapping-mode/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app
spec:
  rules:
  - host: api.prod.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: my-app
            port:
              number: 80
  - host: web.prod.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-app
            port:
              number: 80
